# windows-installer-queries

./: README.md
cpp/: .dccache  .gitignore  CMakeLists.txt  CMakePresets.json
cpp/src/: CMakeLists.txt  Guid.ixx  ProductInfo.ixx  main.cpp
dotnet/: .editorconfig  GlobalUsings.cs  MaybeDisposable.cs  MsiProperty.cs  NativeMethods.cs  Program.cs  TSMoreland.Samples.ProductFinder.sln  TSMoreland.WindowsInstaller.ProductFinder.csproj  TSMoreland.WindowsInstaller.ProductFinder.sln
dotnet/TSMoreland.WindowsInstaller.ProductFinder/: GlobalUsings.cs  MaybeDisposable.cs  MsiProduct.cs  MsiProperty.cs  NativeMethods.cs  Program.cs  Win32ResultCodes.cs
